# cobaltdev

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
cobalt_ai/: Cargo.toml
cobalt_ai/linfa_test/: Cargo.toml  dt.tex
cobalt_ai/linfa_test/src/: main.rs
cobalt_ai/python_lab/: main.py
cobalt_ai/scratch_model/: Cargo.toml
cobalt_ai/scratch_model/src/: lib.rs  main.rs
cobalt_ai/src/: main.rs
cobalt_backend/: .env  Cargo.toml  cobalt.db  dev.db
cobalt_backend/api/cloud-rust-api/: Cargo.toml
cobalt_backend/api/taskflow-api/: Cargo.toml
cobalt_backend/api/taskflow-api/src/: main.rs  routes.rs  state.rs
cobalt_backend/api/taskflow-api/src/handlers/: health.rs  mod.rs  task.rs  user.rs
cobalt_backend/api/taskflow-api/src/middleware/: auth.rs
cobalt_backend/api/taskflow-api/src/models/: task.rs  user.rs
cobalt_backend/api/taskflow-api/src/services/: task_service.rs  user_service.rs
cobalt_backend/api/taskflow-api/src/utils/: error.rs  mod.rs  security.rs
cobalt_backend/api/todo_api/: Cargo.toml
cobalt_backend/api/todo_api/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
cobalt_backend/cloud/: Cargo.toml
cobalt_backend/cloud/migrations/: 001_initial.sql
cobalt_backend/cloud/src/: cli.rs  main.rs  routes.rs
cobalt_backend/cloud/src/config/: config.rs
cobalt_backend/cloud/src/handlers/: auth.rs  files.rs
cobalt_backend/cloud/src/middleware/: auth.rs
cobalt_backend/cloud/src/models/: models.rs
cobalt_backend/cloud/src/services/: database.rs  storage.rs
cobalt_backend/cloud/src/utils/: security.rs
cobalt_backend/src/: auth.rs  cli.rs  email.rs  main.rs
cobalt_backend/src/config/: config.rs
cobalt_backend/src/services/: database.rs  storage.rs
cobalt_cloud/: Cargo.toml  Dioxus.toml  api_out.txt  check_api.rs  check_error.txt  check_out.txt  check_out2.txt  index.html  readme.md  tailwind.css
cobalt_cloud/assets/: tailwind.css
cobalt_cloud/src/: api_test.rs  main.rs  models.rs
cobalt_cloud/src/components/: echo.rs  mod.rs  navbar.rs  upload_dropzone.rs
cobalt_cloud/src/hooks/: mod.rs  use_auth.rs  use_files.rs
cobalt_cloud/src/pages/: home.rs  login.rs
cobalt_cloud/src/services/: api.rs
cobalt_frontend/app/Chat/gradle/wrapper/: gradle-wrapper.properties
cobalt_frontend/app/Messenger/Messenger/: ContentView.swift  MessengerApp.swift  Persistence.swift
cobalt_frontend/app/Messenger/Messenger.xcodeproj/: project.pbxproj
cobalt_frontend/app/Messenger/Messenger.xcodeproj/project.xcworkspace/xcuserdata/ibrahimhaji.xcuserdatad/: UserInterfaceState.xcuserstate
cobalt_frontend/app/Messenger/MessengerTests/: MessengerTests.swift
cobalt_frontend/app/Messenger/MessengerUITests/: MessengerUITests.swift  MessengerUITestsLaunchTests.swift
cobalt_frontend/app/app/: build.gradle.kts
cobalt_frontend/app/encrypt_notepad/notepad/lib/: main.dart
cobalt_frontend/web/cobaltdev/android/app/: build.gradle.kts
cobalt_frontend/web/cobaltdev/ios/Runner/: Info.plist
cobalt_frontend/web/cobaltdev/ios/Runner.xcodeproj/: project.pbxproj
cobalt_frontend/web/cobaltdev/lib/pages/: product_page.dart
cobalt_frontend/web/cobaltdev/linux/: CMakeLists.txt
cobalt_frontend/web/cobaltdev/linux/runner/: my_application.cc
cobalt_frontend/web/cobaltdev/web/: index.html
cobalt_frontend/web/cobaltweb/: README.md  pubspec.yaml
cobalt_frontend/web/cobaltweb/android/: gradle.properties
cobalt_frontend/web/cobaltweb/lib/: main.dart
cobalt_frontend/web/cobaltweb/lib/pages/: about_page.dart  cloud_page.dart  contact_page.dart  home_page.dart  portfolio_page.dart  product_page.dart  service_page.dart
cobalt_frontend/web/cobaltweb/lib/widgets/: animated_section.dart  glass_card.dart  navbar.dart
cobalt_frontend/web/cobaltweb/macos/Runner.xcodeproj/: project.pbxproj
cobalt_frontend/web/cobaltweb/test/: widget_test.dart
cobalt_frontend/web/cobaltweb/web/: manifest.json
cobalt_frontend/web/cobaltweb/windows/runner/: Runner.rc
cobalt_frontend/web/college_proj/: about.html  apply.html  dashboard.html  gallery.html  index.html  script.js  style.css
cobalt_frontend/web/college_proj/alzuni/: script.js  style.css
cobalt_frontend/web/college_proj/ibrahim/: index.html  script.js  style.css
cobalt_systems/cobalt_os/: Cargo.toml  linker.ld  x86_64.json
cobalt_systems/cobalt_os/.cargo/: config.toml
cobalt_systems/cobalt_os/src/: main.rs  timeline.txt
cobalt_systems/kernel/.cargo/: config.toml
cobalt_systems/kernel/src/: main.rs
cobalt_systems/userland/minigrep/src/: main.rs
cobalt_web/: .flutter-plugins-dependencies  pubspec.yaml
cobalt_web/android/: gradle.properties  local.properties
cobalt_web/android/app/src/main/: AndroidManifest.xml
cobalt_web/ios/.symlinks/plugins/: url_launcher_ios  video_player_avfoundation
cobalt_web/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
cobalt_web/ios/Runner.xcodeproj/: project.pbxproj
cobalt_web/lib/: main.dart
cobalt_web/lib/pages/: about_page.dart  contact_page.dart  home_page.dart  portfolio_page.dart  service_page.dart
cobalt_web/lib/widgets/: animated_section.dart  glass_card.dart  navbar.dart
cobalt_web/linux/flutter/ephemeral/.plugin_symlinks/: url_launcher_linux
cobalt_web/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
cobalt_web/macos/Runner.xcodeproj/: project.pbxproj
cobalt_web/macos/Runner/Configs/: AppInfo.xcconfig
cobalt_web/test/: widget_test.dart
cobalt_web/web/: index.html
cobalt_web/windows/: CMakeLists.txt
cobalt_web/windows/flutter/ephemeral/.plugin_symlinks/: url_launcher_windows
cobalt_web/windows/runner/: main.cpp
college/: index.html
releases/v1.0.0/CobaltCloud.app/Contents/: Info.plist
releases/v1.0.0/CobaltCloud.app/Contents/Resources/assets/: tailwind-dxha1f49dae3a3dd8a6.css
releases/v1.0.0/web/: .manifest.json
releases/v1.0.0/web/public/: index.html
releases/v1.0.0/web/public/assets/: cobalt_cloud-dxh6ef0abd9c3551d5.js  cobalt_cloud_bg-dxh22d62f74f519952e.wasm
(+3 files in other folders)
