[workspace]
members = [
    "cobalt_backend/cloud",
    "cobalt_backend/api/cloud-rust-api",
    "cobalt_backend/api/todo_api",
    "cobalt_cloud", 
]

[workspace.dependencies.axum]
version = "0.8.8"
features = ["multipart", "tracing"]

[workspace.dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite", "macros", "migrate"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]
