[workspace]
resolver = "2"
members = [
    # "cobalt_backend/cloud", "cobalt_backend/api/taskflow-api", 
    # uncomment when workiong on backend/cloud/api
    "cobalt_cloud", 
    "cobalt_ai", "cobalt_ai/scratch_model",
    "cobalt_systems/kernel",
]

[workspace.dependencies.axum]
version = "0.8.8"
features = ["multipart", "tracing"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
