[package]
name = "cobalt_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing-subscriber = "0.3"
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
# rand_core = { version = "0.10.0", features = ["std"] }
rand = "0.10.0"
uuid = { version = "1", features = ["v4"] }
lettre = { 
  version = "0.11", 
  default-features = false, 
  features = [
    "tokio1",
    "tokio1-rustls",
    "smtp-transport",
    "builder",
    "ring",
    "webpki-roots"
  ] 
}