[package]
name = "cobalt_cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dioxus-router = "0.7"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dioxus = { version = "0.7", features = [
    "desktop",
    "web",
    "router",
    "signals",
    "asset",
] }
reqwest = { version = "0.13.2", features = ["json", "stream", "rustls"], default-features = false} #rustls
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "full"] }
uuid = { version = "1.0", features = ["serde"] }
futures-timer = "3.0.3"

