# [package]
# name = "cobalt_cloud"
# version = "0.1.0"
# edition = "2021"      # better to keep 2021 for dioxus compatibility
# [dependencies]
# anyhow = "1.0"
# dioxus-router = "0.7"
# tracing = "0.1"
# chrono = { version = "0.4", features = ["serde"] }
# dioxus = { version = "0.7", features = [
#     "desktop",
#     "web",
#     "router",
#     "signals",
#     "asset",
# ] }
# # Fixed reqwest for both desktop + web (no openssl)
# reqwest = { version = "0.13", default-features = false, features = [
#     "json",
#     "multipart",
#     "rustls",    # ← correct feature name
# ] }
# serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1", features = ["rt-multi-thread"] }
# uuid = { version = "1.0", features = ["serde"] }
# futures-timer = "3.0.3"
# getrandom = { version = "0.2", features = ["js"] }        # needed for wasm
# //

[package]
name = "cobalt_cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dioxus-router = "0.7"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dioxus = { version = "0.7", features = ["web", "router", "signals", "asset"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde"] }
futures-timer = "3.0.3"

# Base reqwest - MUST match the version in target blocks
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "full"] }
# FIXED: Changed 0.13.2 back to 0.12 to match
reqwest = { version = "0.12", features = ["native-tls"] }
dioxus = { version = "0.7", features = ["desktop"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
getrandom = { version = "0.2", features = ["js"] }