[package]
name = "cobalt_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
lettre = { version = "0.11", default-features = false, features = [
  "tokio1",
  "tokio1-rustls",
  "smtp-transport",
  "builder",
  "ring",
  "webpki-roots",
] }
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
object_store = { version = "0.13.2", features = ["fs"] }
bytes = "1.0"
anyhow = "1.0"
blake3 = "1.8.4"
shellexpand = "3.0"
jsonwebtoken = "10.3.0"
aes-gcm = "0.10"
rand = {version = "0.8", features = ["std"] }
