[package]
name = "todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "macros"
] }
dotenvy = "0.15"
tower = "0.5.3"
